[package]
name = "iliad"
description = "iliad is a audiobook server"
authors = ["Paul Chambaz <paul.chambaz@tutanota.com>"]
homepage = "https://github.com/paulchambaz/iliad"
version = "1.0.0"
edition = "2021"
include = ["src/**/*", "README.md"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/iliad"
keywords = []

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
flate2 = "1.0.35"
md5 = "0.7.0"
rand = "0.8.5"
serde = "1.0.217"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
slug = "0.1.6"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "chrono",
] }
symphonia = { version = "0.5.4", features = ["all"] }
tar = "0.4.43"

[[bin]]
name = "iliad"
path = "src/main.rs"
