[package]
name = "iliad"
description = "iliad is a audiobook server"
authors = ["Paul Chambaz <paul.chambaz@tutanota.com>"]
homepage = "https://github.com/paulchambaz/iliad"
version = "1.0.0"
edition = "2021"
include = ["src/**/*", "README.md"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/iliad"
keywords = []

[dependencies]
actix-web = "4.13.0"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15"
flate2 = "1.1.9"
rand = "0.10"
serde = "1.0.228"
serde_json = "1"
serde_yml = "0.0"
sha2 = "0.11.0"
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "chrono",
] }
symphonia = { version = "0.5.5", features = ["all"] }
tar = "0.4.45"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.52.1", features = ["sync", "rt", "macros"] }
actix-files = "0.6.10"

[[bin]]
name = "iliad"
path = "src/main.rs"
